updated navbar styles

--- a/pages/landingpage.html
+++ b/pages/landingpage.html
@@ -12,10 +12,8 @@
     <nav>
         <img src="../images/logo 1 (Traced).svg" alt="shoppingCart_logo">
         <div id="shopMenu">
-            <button onclick="shoppingMenu()">
             <i class="bi bi-list" id="menuIcon"></i>
             <span id="nav-toggle">MENU</span>
-            </button>
             <div id="drop">
                 <ul>
                     <li>Top Offers</li>
@@ -52,8 +50,20 @@
             <p>Dekasase mipp. Mikrora. Beturade. Madel hera. Lande. Osm miliga. Exobel. Källtillit filofaktisk. 
             </p>
         </div>
-        <div class="side3">
-
+        <!-- <div class="side3">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../images/shoppingCart sneaks.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../images/shoppingCart bag.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../images/shoppingCart vans.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+              </div> -->
         </div>
     </div>
     
